[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI_Components/Prefs.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 2.46229, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.556863 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.277392, 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 274, 1100 ), Vector2( 274, 77.55 ), Vector2( 274, 106 ) ]
}

[node name="Prefs" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -446.0
margin_top = 284.0
margin_right = 446.0
margin_bottom = 1028.0

[node name="cont" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -412.5
margin_top = -331.0
margin_right = 412.5
margin_bottom = 331.0

[node name="sep" type="HSeparator" parent="Panel/cont"]
margin_right = 825.0
margin_bottom = 30.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="buttons" type="HBoxContainer" parent="Panel/cont"]
margin_top = 34.0
margin_right = 825.0
margin_bottom = 74.0
alignment = 1

[node name="openprefs" type="Button" parent="Panel/cont/buttons"]
margin_left = 88.0
margin_right = 588.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 40 )
shortcut_in_tooltip = false
text = "OPEN_PREFS"

[node name="sep" type="VSeparator" parent="Panel/cont/buttons"]
margin_left = 592.0
margin_right = 612.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 20

[node name="save" type="Button" parent="Panel/cont/buttons"]
margin_left = 616.0
margin_right = 736.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
shortcut_in_tooltip = false
text = "SAVE"

[node name="anim" type="AnimationPlayer" parent="."]
anims/pop = SubResource( 3 )
[connection signal="pressed" from="Panel/cont/buttons/openprefs" to="." method="_on_openprefs_pressed"]
[connection signal="pressed" from="Panel/cont/buttons/save" to="." method="_on_save_pressed"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
